# rust-chat

./: .gitignore  AGENTS.md  Cargo.toml  README.md  devenv.nix  devenv.yaml
.github/workflows/: ci.yml
src/: client.rs  main.rs  server.rs  shared.rs  tests.rs
tests/: integration_test.rs
