[package]
name = "chat"
version = "0.1.0"
authors = ["Jonathan Gao <gsmlg.com@gmail.com>"]
edition = "2024"

[dependencies]
term = "0.7"
rustyline = "14.0"
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
rand = "0.8"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
